working on rendering response

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>This is a simple math quiz. Select one answer from the choices. You must select an answer before proceeding. Good Luck.</h1>
-    <button id='start'>Start Quiz</button>
+    <button id="start">Start Quiz</button>
   </div>
   
   <script src="quiz.js"></script>
